--- a/Assignment_PartA.ipynb
+++ b/Assignment_PartA.ipynb
@@ -22,10 +22,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from pprint import pprint\n",
     "import pymongo\n",
     "from pymongo import MongoClient\n",
     "import csv"
@@ -33,17 +34,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'str'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Task 2\n",
     "# Question 1\n",
@@ -52,22 +45,69 @@
     "client = MongoClient() # so we connect on the default host and port\n",
     "db = client.fit3182_assignment_db # create a new database fit3182_assignment_db\n",
     "the_collection = db.climate  # create a new collection called 'climate'\n",
-    "with open('climate_historic.csv', 'r') as file_one, open('hotspot_historic.csv', 'r') as file_two:  # open both files\n",
+    "with open('climate_historic.csv', 'r') as file_one:  # open both files\n",
     "    # now create a csv object for each of the files\n",
     "    climate_data = csv.reader(file_one)\n",
+    "    climate_lines = []\n",
+    "    count = 0\n",
+    "    for c_line in climate_data:\n",
+    "        if count == 0:\n",
+    "            count += 1\n",
+    "        else:\n",
+    "            climate_lines.append(c_line)    \n",
+    "            \n",
+    "\n",
+    "            \n",
+    "with open('hotspot_historic.csv', 'r') as file_two: \n",
     "    hotspot_data = csv.reader(file_two)\n",
-    "    for \n",
-    "        \n",
+    "    hotspot_lines = []\n",
+    "    count = 0\n",
+    "    for h_line in hotspot_data:  # go through the hotspot data.\n",
+    "        if count == 0:\n",
+    "            count += 1\n",
+    "        else:\n",
+    "            hotspot_lines.append(h_line)\n",
+    "\n",
+    "\n",
+    "for hotspot_line in hotspot_lines:\n",
+    "    for climate_line in climate_lines:\n",
+    "        if hotspot_line[4] == climate_line[1]:\n",
+    "            new_entry = {\n",
+    "              \"latitude\" : hotspot_line[0],\n",
+    "             \"longitude\": hotspot_line[1],\n",
+    "             \"datetime\" : hotspot_line[2],\n",
+    "             \"confidence\" : hotspot_line[3],\n",
+    "             \"date\": hotspot_line[4],\n",
+    "             \"surface_temperature_celsius\" : hotspot_line[5],\n",
+    "              \"station\" : climate_line[0],\n",
+    "             \"air_temperature_celsius\" : climate_line[2],\n",
+    "             \"relative_humidity\": climate_line[3],\n",
+    "             \"windspeed_knots\" : climate_line[4],\n",
+    "             \"max_wind_speed\": climate_line[5],\n",
+    "             \"precipitation\": climate_line[6],\n",
+    "             \"GHI_w/m2\": climate_line[7]}\n",
+    "            result = the_collection.insert_one(new_entry)  \n",
+    "\n",
     "    \n",
-    "    "
+    "# new_entry = {\"latitude\" : hotspot_line[0],\n",
+    "#          \"longitude\": hotspot_line[1],\n",
+    "#          \"datetime\" : hotspot_line[2],\n",
+    "#          \"confidence\" : hotspot_line[3],\n",
+    "#          \"date\": hotspot_line[4],\n",
+    "#          \"surface_temperature_celsius\" : hotspot_line[5],\n",
+    "#           \"station\" : climate_line[0],\n",
+    "#          \"air_temperature_celsius\" : climate_line[2],\n",
+    "#          \"relative_humidity\": climate_line[3],\n",
+    "#          \"windspeed_knots\" : climate_line[4],\n",
+    "#          \"max_wind_speed\": climate_line[5],\n",
+    "#          \"precipitation\": climate_line[6],\n",
+    "#          \"GHI_w/m2\": climate_line[7]\n",
+    "#         }\n",
+    "# result = the_collection.insert_one(new_entry)   \n",
+    "# a = the_collection.find({})\n",
+    "# for item in a:\n",
+    "#     pprint(item)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
