--- a/Assignment_PartA.ipynb
+++ b/Assignment_PartA.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "# FIT3182 Assignment 1: Part A\n",
     "\n",
-    "Task 1\n",
+    "Task 1:\n",
     "The data model will follow the document data model. This is because the data contains multiple different types for example datetime (in hotspot_historic), date, integers and strings (used in preciptation measurements). Additionally the data is relatively unstructured- in climate historic each set of measurements is taken daily without any kind of grouping between the measurements and in the hotspot data there is no sorting with any of the dates or datetimes. Furthermore since the dates are common between both the hotspot_historic and climate_historic we can group the documents together and have overall denormalised data. This is optimal since we only plan to run search queries through the data which will be much faster when the documents are grouped together in this way. The document data model also allows for some attributes to be empty and this may be the case since one climate data may have zero or many fire data, hence leading to some possibly empty attributes.\n",
     "Example of data:"
    ]
@@ -36,16 +36,55 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "def samedate(hotspot_date, climate_date):\n",
+    "    # this function checks if two dates are the same\n",
+    "    # This function was made because date is forrmatted differently in hotspot_historic and climate_historic\n",
+    "    # eg. hotspot historic '27/12/2018' and climate historic '27/12/18'\n",
+    "    actual_date = []\n",
+    "    final_date = []\n",
+    "    join_string = ''\n",
+    "    date_length = len(hotspot_date)\n",
+    "    for k in range(date_length - 1, -1, -1):\n",
+    "        if k == 7 or k == 6:\n",
+    "            continue\n",
+    "        else:\n",
+    "            actual_date.append(hotspot_date[k])\n",
+    "    for j in range(date_length - 3, -1, -1):\n",
+    "        final_date.append(actual_date[j])\n",
+    "\n",
+    "    return (join_string.join(final_date) == climate_date)\n",
+    "print(samedate('27/12/2018', '27/12/18'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Task 2\n",
     "# Question 1\n",
     "# So we have to load all the data from the csv files into a new database fit3182_assignment_db\n",
-    "# Firstly create the data base\n",
+    "# Check if the main collection already exists\n",
+    "try:\n",
+    "    the_collection.drop()\n",
+    "except NameError:\n",
+    "    pass\n",
+    "# Now create the data base\n",
     "client = MongoClient() # so we connect on the default host and port\n",
     "db = client.fit3182_assignment_db # create a new database fit3182_assignment_db\n",
-    "the_collection = db.climate  # create a new collection called 'climate'\n",
-    "with open('climate_historic.csv', 'r') as file_one:  # open both files\n",
+    "the_collection = db.climate  # create a new collection called 'the_collection'\n",
+    "with open('climate_historic.csv', 'r') as file_one:  # open climate historic file\n",
     "    # now create a csv object for each of the files\n",
     "    climate_data = csv.reader(file_one)\n",
     "    climate_lines = []\n",
@@ -54,11 +93,11 @@
     "        if count == 0:\n",
     "            count += 1\n",
     "        else:\n",
-    "            climate_lines.append(c_line)    \n",
+    "            climate_lines.append(c_line)   # put each line of the data in a list \n",
     "            \n",
     "\n",
     "            \n",
-    "with open('hotspot_historic.csv', 'r') as file_two: \n",
+    "with open('hotspot_historic.csv', 'r') as file_two: # open hotspot historic file\n",
     "    hotspot_data = csv.reader(file_two)\n",
     "    hotspot_lines = []\n",
     "    count = 0\n",
@@ -66,18 +105,19 @@
     "        if count == 0:\n",
     "            count += 1\n",
     "        else:\n",
-    "            hotspot_lines.append(h_line)\n",
+    "            hotspot_lines.append(h_line)  # put each line of the data in a list\n",
     "\n",
-    "\n",
-    "for hotspot_line in hotspot_lines:\n",
-    "    for climate_line in climate_lines:\n",
-    "        if hotspot_line[4] == climate_line[1]:\n",
+    "documents = []\n",
+    "for climate_line in climate_lines:\n",
+    "    matched = False\n",
+    "    for hotspot_line in hotspot_lines:\n",
+    "        if samedate(hotspot_line[4], climate_line[1]):\n",
     "            new_entry = {\n",
     "              \"latitude\" : hotspot_line[0],\n",
     "             \"longitude\": hotspot_line[1],\n",
     "             \"datetime\" : hotspot_line[2],\n",
     "             \"confidence\" : hotspot_line[3],\n",
-    "             \"date\": hotspot_line[4],\n",
+    "             \"date\": climate_line[1],\n",
     "             \"surface_temperature_celsius\" : hotspot_line[5],\n",
     "              \"station\" : climate_line[0],\n",
     "             \"air_temperature_celsius\" : climate_line[2],\n",
@@ -86,27 +126,44 @@
     "             \"max_wind_speed\": climate_line[5],\n",
     "             \"precipitation\": climate_line[6],\n",
     "             \"GHI_w/m2\": climate_line[7]}\n",
-    "            result = the_collection.insert_one(new_entry)  \n",
+    "            documents.append(new_entry)\n",
+    "            matched = True\n",
+    "    if matched == False: # there was not a fire on this date\n",
+    "        # Set None's for all the unmatchable values cause there was no fire on this date\n",
+    "        no_fire = {\n",
+    "            \"latitude\" : None,\n",
+    "            \"longitude\": None,\n",
+    "            \"datetime\" : None,\n",
+    "            \"confidence\" : None,\n",
+    "            \"date\": climate_line[1],\n",
+    "            \"surface_temperature_celsius\": None,\n",
+    "            \"station\": climate_line[0],\n",
+    "            \"air_temperature_celsius\" : climate_line[2],\n",
+    "            \"relative_humidity\": climate_line[3],\n",
+    "            \"windspeed_knots\" : climate_line[4],\n",
+    "            \"max_wind_speed\": climate_line[5],\n",
+    "            \"precipitation\": climate_line[6],\n",
+    "            \"GHI_w/m2\": climate_line[7]\n",
+    "        }\n",
+    "        documents.append(no_fire)\n",
     "\n",
-    "    \n",
-    "# new_entry = {\"latitude\" : hotspot_line[0],\n",
-    "#          \"longitude\": hotspot_line[1],\n",
-    "#          \"datetime\" : hotspot_line[2],\n",
-    "#          \"confidence\" : hotspot_line[3],\n",
-    "#          \"date\": hotspot_line[4],\n",
-    "#          \"surface_temperature_celsius\" : hotspot_line[5],\n",
-    "#           \"station\" : climate_line[0],\n",
-    "#          \"air_temperature_celsius\" : climate_line[2],\n",
-    "#          \"relative_humidity\": climate_line[3],\n",
-    "#          \"windspeed_knots\" : climate_line[4],\n",
-    "#          \"max_wind_speed\": climate_line[5],\n",
-    "#          \"precipitation\": climate_line[6],\n",
-    "#          \"GHI_w/m2\": climate_line[7]\n",
-    "#         }\n",
-    "# result = the_collection.insert_one(new_entry)   \n",
-    "# a = the_collection.find({})\n",
-    "# for item in a:\n",
-    "#     pprint(item)"
+    "\n",
+    "result = the_collection.insert_many(documents)  \n",
+    "# cursor = the_collection.find({})\n",
+    "# for item in cursor:\n",
+    "#     pprint(item)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Task 2 Question 2\n",
+    "\n",
+    "# a)\n",
+    "\n"
    ]
   }
  ],
