--- a/Assignment_PartB_Producer2.ipynb
+++ b/Assignment_PartB_Producer2.ipynb
@@ -2,11 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# first find the latest date that was inserted in the climate data into the MongoDB Database in Part A. \n",
     "from pprint import pprint\n",
     "import pymongo\n",
     "from pymongo import MongoClient\n",
@@ -17,15 +16,8 @@
     "from json import dumps\n",
     "from kafka import KafkaProducer\n",
     "import random\n",
-    "import time"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import time\n",
+    "\n",
     "def samedate(hotspot_date, climate_date):\n",
     "    # this function checks if two dates are the same\n",
     "    # This function was made because date is forrmatted differently in hotspot_historic and climate_historic\n",
@@ -42,15 +34,8 @@
     "    for j in range(date_length - 3, -1, -1):\n",
     "        final_date.append(actual_date[j])\n",
     "\n",
-    "    return (join_string.join(final_date) == climate_date)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return (join_string.join(final_date) == climate_date)\n",
+    "\n",
     "def get_prec_number(a_string):\n",
     "    # this function gives the float part of a precipitation measurement\n",
     "    final = a_string.strip()\n",
@@ -60,27 +45,13 @@
     "def get_prec_letter(a_string):\n",
     "    # this function gives the letter representing the tyoe of precipitation measurement\n",
     "    final = a_string.strip()\n",
-    "    return final[-1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return final[-1]\n",
+    "\n",
     "def change_format(a_date):\n",
     "    date_final = datetime.strptime(a_date, '%d/%m/%y')\n",
     "    formatted = date_final.strftime(\"20%y/%m/%d\")\n",
-    "    return formatted\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return formatted\n",
+    "\n",
     "# Task 2\n",
     "# Question 1\n",
     "# So we have to load all the data from the csv files into a new database fit3182_assignment_db\n",
@@ -162,16 +133,9 @@
     "result = a_collection.insert_many(documents)  \n",
     "# cursor = a_collection.find({})\n",
     "# for item in cursor:\n",
-    "#     pprint(item)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "#     pprint(item)\n",
     "# find the latest date in the stream\n",
+    "\n",
     "latest_date = a_collection.find().sort(\"date\", pymongo.DESCENDING).limit(1)\n",
     "for k in latest_date:\n",
     "    new_date = datetime.strptime(k['date'], '%Y/%m/%d')"
@@ -179,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -187,9 +151,18 @@
      "output_type": "stream",
      "text": [
       "Publishing records..\n",
-      "Message published successfully. Data:  ['-37.858', '143.428', '14', '49.5', '6', '12', ' 0.00G', '121', '2019/01/01', 'Producer1']\n",
-      "Message published successfully. Data:  ['-36.779', '146.108', '15', '51', '9.6', '15.9', ' 0.16G', '128', '2019/01/02', 'Producer1']\n",
-      "Message published successfully. Data:  ['-36.346', '143.631', '17', '47.2', '4.9', '13', ' 0.00I', '149', '2019/01/03', 'Producer1']\n"
+      "Message published successfully. Data:  ['-36.6564', '142.8615', '91', '69', '2018/12/31', 'Producer2']\n",
+      "Message published successfully. Data:  ['-37.4523', '147.0175', '90', '66', '2018/12/31', 'Producer2']\n",
+      "Message published successfully. Data:  ['-37.817', '142.3724', '79', '53', '2018/12/31', 'Producer2']\n",
+      "Message published successfully. Data:  ['-36.738', '142.1177', '95', '77', '2018/12/31', 'Producer2']\n",
+      "Message published successfully. Data:  ['-36.6529', '143.9035', '100', '112', '2018/12/31', 'Producer2']\n",
+      "Message published successfully. Data:  ['-36.5438', '144.7548', '99', '84', '2019/01/01', 'Producer2']\n",
+      "Message published successfully. Data:  ['-38.495', '146.944', '56', '53', '2019/01/01', 'Producer2']\n",
+      "Message published successfully. Data:  ['-36.0694', '141.5717', '72', '54', '2019/01/01', 'Producer2']\n",
+      "Message published successfully. Data:  ['-37.38', '148.053', '80', '46', '2019/01/01', 'Producer2']\n",
+      "Message published successfully. Data:  ['-36.8377', '143.4624', '64', '42', '2019/01/01', 'Producer2']\n",
+      "Message published successfully. Data:  ['-37.5316', '143.1498', '77', '51', '2019/01/02', 'Producer2']\n",
+      "Message published successfully. Data:  ['-36.8079', '145.1409', '63', '42', '2019/01/02', 'Producer2']\n"
      ]
     },
     {
@@ -199,24 +172,33 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-7-0e25e7f36333>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     51\u001b[0m         \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mline_sent\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     52\u001b[0m         \u001b[0mpublish_message\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mproducer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtopic\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'parsed'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 53\u001b[0;31m         \u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-3-4e5bb22beb46>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     59\u001b[0m             \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mline_sent\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     60\u001b[0m             \u001b[0mpublish_message\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mproducer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtopic\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'parsed'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 61\u001b[0;31m             \u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     62\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     63\u001b[0m             \u001b[0mindex_of_line\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlength_lines\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
    "source": [
-    "# get the data from the stream now\n",
+    "from pprint import pprint\n",
+    "import pymongo\n",
+    "from pymongo import MongoClient\n",
+    "import csv\n",
+    "from datetime import datetime\n",
+    "from datetime import timedelta\n",
+    "from time import sleep\n",
+    "from json import dumps\n",
+    "from kafka import KafkaProducer\n",
+    "import random\n",
+    "import time\n",
     "\n",
-    "            \n",
-    "with open('climate_streaming.csv', 'r') as file_three: # open hotspot historic file\n",
-    "    cstream_data = csv.reader(file_three)\n",
-    "    cstream_lines = []\n",
+    "with open('hotspot_AQUA_streaming.csv', 'r') as file_four: # open hotspot historic file\n",
+    "    aqua_data = csv.reader(file_four)\n",
+    "    aqua_lines = []\n",
     "    count = 0\n",
-    "    for line in cstream_data:  # go through the hotspot data.\n",
+    "    for line in aqua_data:  # go through the hotspot data.\n",
     "        if count == 0:\n",
     "            count += 1\n",
     "        else:\n",
-    "            cstream_lines.append(line)  # put each line of the data in a list\n",
+    "            aqua_lines.append(line)  # put each line of the data in a list\n",
     "\n",
     "def publish_message(producer_instance, topic_name, key, value):\n",
     "    try:\n",
@@ -242,22 +224,31 @@
     "    \n",
     "if __name__ == '__main__':\n",
     "   \n",
-    "    topic = 'Producer1'\n",
+    "    topic = 'Producer2'\n",
     "    \n",
     "    print('Publishing records..')\n",
     "    producer = connect_kafka_producer()\n",
-    "    length_lines = len(cstream_lines)\n",
-    "    \n",
+    "    length_lines = len(aqua_lines)\n",
+    "    start_time = time.time()\n",
     "    while True:\n",
-    "        index_of_line = random.randrange(0, length_lines)\n",
-    "        new_date = new_date + timedelta(days = 1)\n",
-    "        str_date = new_date.strftime('%Y/%m/%d')\n",
-    "        line_sent = cstream_lines[index_of_line]\n",
-    "        line_sent.append(str_date)\n",
-    "        line_sent.append(topic)\n",
-    "        data = str(line_sent)\n",
-    "        publish_message(producer, topic, 'parsed', data)\n",
-    "        sleep(10)"
+    "        if time.time() - start_time <= 10:\n",
+    "            index_of_line = random.randrange(0, length_lines)\n",
+    "            new_date = new_date\n",
+    "            str_date = new_date.strftime('%Y/%m/%d')\n",
+    "            line_sent = aqua_lines[index_of_line] + [str_date] + [topic]\n",
+    "            data = str(line_sent)\n",
+    "            publish_message(producer, topic, 'parsed', data)\n",
+    "            sleep(2)\n",
+    "        else:\n",
+    "            index_of_line = random.randrange(0, length_lines)\n",
+    "            new_date = new_date + timedelta(days = 1)\n",
+    "            str_date = new_date.strftime('%Y/%m/%d')\n",
+    "            line_sent = aqua_lines[index_of_line] + [str_date] + [topic]\n",
+    "            data = str(line_sent)\n",
+    "            publish_message(producer, topic, 'parsed', data)\n",
+    "            start_time = time.time()\n",
+    "            sleep(2)\n",
+    "            "
    ]
   },
   {
