--- a/Assignment_PartB_Producer3.ipynb
+++ b/Assignment_PartB_Producer3.ipynb
@@ -2,11 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# first find the latest date that was inserted in the climate data into the MongoDB Database in Part A. \n",
     "from pprint import pprint\n",
     "import pymongo\n",
     "from pymongo import MongoClient\n",
@@ -17,15 +16,8 @@
     "from json import dumps\n",
     "from kafka import KafkaProducer\n",
     "import random\n",
-    "import time"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import time\n",
+    "\n",
     "def samedate(hotspot_date, climate_date):\n",
     "    # this function checks if two dates are the same\n",
     "    # This function was made because date is forrmatted differently in hotspot_historic and climate_historic\n",
@@ -42,15 +34,8 @@
     "    for j in range(date_length - 3, -1, -1):\n",
     "        final_date.append(actual_date[j])\n",
     "\n",
-    "    return (join_string.join(final_date) == climate_date)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return (join_string.join(final_date) == climate_date)\n",
+    "\n",
     "def get_prec_number(a_string):\n",
     "    # this function gives the float part of a precipitation measurement\n",
     "    final = a_string.strip()\n",
@@ -60,27 +45,13 @@
     "def get_prec_letter(a_string):\n",
     "    # this function gives the letter representing the tyoe of precipitation measurement\n",
     "    final = a_string.strip()\n",
-    "    return final[-1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return final[-1]\n",
+    "\n",
     "def change_format(a_date):\n",
     "    date_final = datetime.strptime(a_date, '%d/%m/%y')\n",
     "    formatted = date_final.strftime(\"20%y/%m/%d\")\n",
-    "    return formatted\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return formatted\n",
+    "\n",
     "# Task 2\n",
     "# Question 1\n",
     "# So we have to load all the data from the csv files into a new database fit3182_assignment_db\n",
@@ -162,16 +133,9 @@
     "result = a_collection.insert_many(documents)  \n",
     "# cursor = a_collection.find({})\n",
     "# for item in cursor:\n",
-    "#     pprint(item)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "#     pprint(item)\n",
     "# find the latest date in the stream\n",
+    "\n",
     "latest_date = a_collection.find().sort(\"date\", pymongo.DESCENDING).limit(1)\n",
     "for k in latest_date:\n",
     "    new_date = datetime.strptime(k['date'], '%Y/%m/%d')"
@@ -179,17 +143,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 11,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Publishing records..\n",
-      "Message published successfully. Data:  ['-37.858', '143.428', '14', '49.5', '6', '12', ' 0.00G', '121', '2019/01/01', 'Producer1']\n",
-      "Message published successfully. Data:  ['-36.779', '146.108', '15', '51', '9.6', '15.9', ' 0.16G', '128', '2019/01/02', 'Producer1']\n",
-      "Message published successfully. Data:  ['-36.346', '143.631', '17', '47.2', '4.9', '13', ' 0.00I', '149', '2019/01/03', 'Producer1']\n"
+      "Message published successfully. Data:  ['-36.4944', '141.8992', '58', '40', '2019/01/16', 'Producer3']\n",
+      "Message published successfully. Data:  ['-34.2708', '141.6158', '79', '52', '2019/01/16', 'Producer3']\n",
+      "Message published successfully. Data:  ['-36.273', '146.155', '77', '36', '2019/01/16', 'Producer3']\n",
+      "Message published successfully. Data:  ['-37.4047', '143.6615', '69', '45', '2019/01/16', 'Producer3']\n",
+      "Message published successfully. Data:  ['-36.388', '141.8309', '93', '73', '2019/01/16', 'Producer3']\n",
+      "Message published successfully. Data:  ['-36.943', '143.286', '51', '29', '2019/01/17', 'Producer3']\n",
+      "Message published successfully. Data:  ['-36.6664', '144.7828', '82', '55', '2019/01/17', 'Producer3']\n",
+      "Message published successfully. Data:  ['-37.327', '148.083', '100', '47', '2019/01/17', 'Producer3']\n",
+      "Message published successfully. Data:  ['-36.4149', '141.0156', '85', '60', '2019/01/17', 'Producer3']\n",
+      "Message published successfully. Data:  ['-36.9034', '141.0013', '100', '95', '2019/01/17', 'Producer3']\n",
+      "Message published successfully. Data:  ['-36.99', '142.9147', '76', '49', '2019/01/18', 'Producer3']\n",
+      "Message published successfully. Data:  ['-37.5812', '142.7374', '94', '75', '2019/01/18', 'Producer3']\n",
+      "Message published successfully. Data:  ['-34.3914', '141.726', '78', '51', '2019/01/18', 'Producer3']\n",
+      "Message published successfully. Data:  ['-36.934', '142.5759', '64', '47', '2019/01/18', 'Producer3']\n",
+      "Message published successfully. Data:  ['-37.7236', '142.947', '94', '73', '2019/01/18', 'Producer3']\n",
+      "Message published successfully. Data:  ['-35.963', '141.078', '86', '60', '2019/01/19', 'Producer3']\n",
+      "Message published successfully. Data:  ['-36.9285', '143.9622', '66', '43', '2019/01/19', 'Producer3']\n",
+      "Message published successfully. Data:  ['-35.0691', '141.4546', '80', '56', '2019/01/19', 'Producer3']\n",
+      "Message published successfully. Data:  ['-36.6828', '144.784', '90', '66', '2019/01/19', 'Producer3']\n",
+      "Message published successfully. Data:  ['-36.0663', '145.6855', '87', '62', '2019/01/19', 'Producer3']\n",
+      "Message published successfully. Data:  ['-37.8475', '147.2512', '76', '50', '2019/01/20', 'Producer3']\n",
+      "Message published successfully. Data:  ['-37.3863', '142.8822', '85', '59', '2019/01/20', 'Producer3']\n",
+      "Message published successfully. Data:  ['-36.282', '146.157', '100', '71', '2019/01/20', 'Producer3']\n",
+      "Message published successfully. Data:  ['-36.2726', '145.506', '77', '50', '2019/01/20', 'Producer3']\n",
+      "Message published successfully. Data:  ['-38.0326', '141.5413', '83', '56', '2019/01/20', 'Producer3']\n",
+      "Message published successfully. Data:  ['-36.779', '146.108', '61', '32', '2019/01/21', 'Producer3']\n",
+      "Message published successfully. Data:  ['-36.9887', '142.6515', '82', '55', '2019/01/21', 'Producer3']\n",
+      "Message published successfully. Data:  ['-36.4384', '141.7444', '81', '55', '2019/01/21', 'Producer3']\n",
+      "Message published successfully. Data:  ['-36.7199', '141.3946', '82', '55', '2019/01/21', 'Producer3']\n",
+      "Message published successfully. Data:  ['-36.4133', '141.0286', '52', '47', '2019/01/21', 'Producer3']\n",
+      "Message published successfully. Data:  ['-37.3226', '143.5442', '78', '51', '2019/01/22', 'Producer3']\n",
+      "Message published successfully. Data:  ['-35.708', '143.7987', '50', '38', '2019/01/22', 'Producer3']\n",
+      "Message published successfully. Data:  ['-36.4936', '143.9868', '72', '46', '2019/01/22', 'Producer3']\n"
      ]
     },
     {
@@ -199,24 +195,21 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-7-0e25e7f36333>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     51\u001b[0m         \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mline_sent\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     52\u001b[0m         \u001b[0mpublish_message\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mproducer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtopic\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'parsed'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 53\u001b[0;31m         \u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-11-8f3d097372c1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     47\u001b[0m             \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mline_sent\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     48\u001b[0m             \u001b[0mpublish_message\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mproducer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtopic\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'parsed'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 49\u001b[0;31m             \u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     50\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     51\u001b[0m             \u001b[0mindex_of_line\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlength_lines\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
    "source": [
-    "# get the data from the stream now\n",
-    "\n",
-    "            \n",
-    "with open('climate_streaming.csv', 'r') as file_three: # open hotspot historic file\n",
-    "    cstream_data = csv.reader(file_three)\n",
-    "    cstream_lines = []\n",
+    "with open('hotspot_TERRA_streaming.csv', 'r') as file_four: # open hotspot historic file\n",
+    "    terra_data = csv.reader(file_four)\n",
+    "    terra_lines = []\n",
     "    count = 0\n",
-    "    for line in cstream_data:  # go through the hotspot data.\n",
+    "    for line in terra_data:  # go through the hotspot data.\n",
     "        if count == 0:\n",
     "            count += 1\n",
     "        else:\n",
-    "            cstream_lines.append(line)  # put each line of the data in a list\n",
+    "            terra_lines.append(line)  # put each line of the data in a list\n",
     "\n",
     "def publish_message(producer_instance, topic_name, key, value):\n",
     "    try:\n",
@@ -242,22 +235,31 @@
     "    \n",
     "if __name__ == '__main__':\n",
     "   \n",
-    "    topic = 'Producer1'\n",
+    "    topic = 'Producer3'\n",
     "    \n",
     "    print('Publishing records..')\n",
     "    producer = connect_kafka_producer()\n",
-    "    length_lines = len(cstream_lines)\n",
-    "    \n",
+    "    length_lines = len(terra_lines)\n",
+    "    start_time = time.time()\n",
     "    while True:\n",
-    "        index_of_line = random.randrange(0, length_lines)\n",
-    "        new_date = new_date + timedelta(days = 1)\n",
-    "        str_date = new_date.strftime('%Y/%m/%d')\n",
-    "        line_sent = cstream_lines[index_of_line]\n",
-    "        line_sent.append(str_date)\n",
-    "        line_sent.append(topic)\n",
-    "        data = str(line_sent)\n",
-    "        publish_message(producer, topic, 'parsed', data)\n",
-    "        sleep(10)"
+    "        if time.time() - start_time <= 10:\n",
+    "            index_of_line = random.randrange(0, length_lines)\n",
+    "            new_date = new_date\n",
+    "            str_date = new_date.strftime('%Y/%m/%d')\n",
+    "            line_sent = terra_lines[index_of_line] + [str_date] + [topic]\n",
+    "            data = str(line_sent)\n",
+    "            publish_message(producer, topic, 'parsed', data)\n",
+    "            sleep(2)\n",
+    "        else:\n",
+    "            index_of_line = random.randrange(0, length_lines)\n",
+    "            new_date = new_date + timedelta(days = 1)\n",
+    "            str_date = new_date.strftime('%Y/%m/%d')\n",
+    "            line_sent = terra_lines[index_of_line] + [str_date] + [topic]\n",
+    "            data = str(line_sent)\n",
+    "            publish_message(producer, topic, 'parsed', data)\n",
+    "            start_time = time.time()\n",
+    "            sleep(2)\n",
+    "            "
    ]
   },
   {
